--- a/order.css
+++ b/order.css
@@ -1,10 +1,7 @@
 body{
     background-color: #f8f9fa;}
 
-.container{
- margin: 0%;
- justify-content: space-between;
-}
+
 .d-flex {
     width: 30%;}
 
@@ -25,29 +22,31 @@ body{
 }
 
 .list-group{
-    background-color: #0158A8;
+    background-color: #ffffff;
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     border-radius:0px;
- 
+    margin-top: 6%;
+    border-radius: 20px;
+    box-shadow: #b2daff 0px 0px 23px -7px;}
 
-}
 .list-group :nth-child(1){
     margin-top: 28%;
 }
+
 .list-group li{
     border: none;
-    background-color: #0158A8;
-   height: 10%;
+    background-color: white;
+    height: 10%;
     text-align: start;
     display: flex;
     align-items: center;
     justify-content:start;
     margin-top: 5%;
     margin-left: 10%;
-    color: white;
+    color: rgb(52, 52, 52);
     
-}
+    }
 .list-group li img {
     width: 15%;
     padding-bottom: 35%;
